--- a/mapping/templates/index.html
+++ b/mapping/templates/index.html
@@ -9,10 +9,10 @@
     <base target="_top">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="static/css/styles.css" rel="stylesheet">
+    <link href="mapping/static/css/styles.css" rel="stylesheet">
 
     <title>Pax Dei Maps</title>
-    <link rel="icon" href="static/assets/favicon.ico" type="image/png">
+    <link rel="icon" href="mapping/static/assets/favicon.ico" type="image/png">
     <style>
         .leaflet-container {
             background: none !important;
@@ -21,7 +21,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('static/assets/background.jpeg');
+            background-image: url('mapping/static/assets/background.jpeg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: top;
@@ -34,14 +34,14 @@
     <header class="logo-bar">
 
         <button id="resources-button" onclick="toggleAndCloseSidebar()">
-            <img src="static/assets/marker.png" alt="Resources Icon">Resources</button>
+            <img src="mapping/static/assets/marker.png" alt="Resources Icon">Resources</button>
 
         <button class="clear-all-button" onclick="closeSidebar()">Clear All</button>
 
         <button id="login-button" class="login-button">Login</button>
 
         <button id="info-button" class="info-button">
-            <img src="static/assets/info.png" alt="Info Icon">Info</button>
+            <img src="mapping/static/assets/info.png" alt="Info Icon">Info</button>
 
 
 
@@ -55,56 +55,56 @@
         <div class="sidebar">
             <div class="custom-dropdown" style="margin-bottom: 20px;">
                 <div class="dropdown-title" onclick="toggleDropdown('fruit')">
-                    <img src="static/assets/fruit_icon.png" style="width: 50px; height: 50px;" alt="Fruit Icon"> Fruit
+                    <img src="mapping/static/assets/fruit_icon.png" style="width: 50px; height: 50px;" alt="Fruit Icon"> Fruit
                 </div>
                 <div class="dropdown-options" id="fruit-dropdown"></div>
             </div>
             
             <div class="custom-dropdown">
                 <div class="dropdown-title" onclick="toggleDropdown('animals')">
-                    <img src="static/assets/animal_icon.png" style="width: 50px; height: 50px;" alt="Animals Icon"> Animals
+                    <img src="mapping/static/assets/animal_icon.png" style="width: 50px; height: 50px;" alt="Animals Icon"> Animals
                 </div>
                 <div class="dropdown-options" id="animals-dropdown"></div>
             </div>
             
             <div class="custom-dropdown">
                 <div class="dropdown-title" onclick="toggleDropdown('plants')">
-                    <img src="static/assets/plant_icon.png" style="width: 50px; height: 50px;" alt="Plants Icon"> Plants
+                    <img src="mapping/static/assets/plant_icon.png" style="width: 50px; height: 50px;" alt="Plants Icon"> Plants
                 </div>
                 <div class="dropdown-options" id="plants-dropdown"></div>
             </div>
             
             <div class="custom-dropdown">
                 <div class="dropdown-title" onclick="toggleDropdown('mushrooms')">
-                    <img src="static/assets/mushroom_icon.png" style="width: 50px; height: 50px;" alt="Mushrooms Icon"> Mushrooms
+                    <img src="mapping/static/assets/mushroom_icon.png" style="width: 50px; height: 50px;" alt="Mushrooms Icon"> Mushrooms
                 </div>
                 <div class="dropdown-options" id="mushrooms-dropdown"></div>
             </div>
             
             <div class="custom-dropdown">
                 <div class="dropdown-title" onclick="toggleDropdown('flowers')">
-                    <img src="static/assets/flower_icon.png" style="width: 50px; height: 50px;" alt="Flowers Icon"> Flowers
+                    <img src="mapping/static/assets/flower_icon.png" style="width: 50px; height: 50px;" alt="Flowers Icon"> Flowers
                 </div>
                 <div class="dropdown-options" id="flowers-dropdown"></div>
             </div>
             
             <div class="custom-dropdown">
                 <div class="dropdown-title" onclick="toggleDropdown('stone')">
-                    <img src="static/assets/stone_icon.png" style="width: 50px; height: 50px;"alt="Stone Icon"> Stone
+                    <img src="mapping/static/assets/stone_icon.png" style="width: 50px; height: 50px;"alt="Stone Icon"> Stone
                 </div>
                 <div class="dropdown-options" id="stone-dropdown"></div>
             </div>
             
             <div class="custom-dropdown">
                 <div class="dropdown-title" onclick="toggleDropdown('special')">
-                    <img src="static/assets/special_icon.png" style="width: 50px; height: 50px;" alt="Special Icon"> Special
+                    <img src="mapping/static/assets/special_icon.png" style="width: 50px; height: 50px;" alt="Special Icon"> Special
                 </div>
                 <div class="dropdown-options" id="special-dropdown"></div>
             </div>
             
             <div class="custom-dropdown">
                 <div class="dropdown-title" onclick="toggleDropdown('players')">
-                    <img src="static/assets/players_icon.png" style="width: 50px; height: 50px;" alt="Players Icon"> Players
+                    <img src="mapping/static/assets/players_icon.png" style="width: 50px; height: 50px;" alt="Players Icon"> Players
                 </div>
                 <div class="dropdown-options player-options" id="players-dropdown"></div>
             </div>
@@ -125,7 +125,7 @@
               <h2>Ctrl+Left-click to remove them</h2><br>
               For questions, support, or feedback, visit us on Discord!<br>
               <a href="https://discord.gg/rWpsquDXqA" target="_blank">
-                <img src='static/assets/discord.png' style="width: 60px; height: 60px;" alt="Discord Icon">
+                <img src='mapping/static/assets/discord.png' style="width: 60px; height: 60px;" alt="Discord Icon">
               </a>
             </div>
           </div>
